<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/ivDetailProfilePic"
        android:src="@android:drawable/screen_background_dark_transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/profile_pic"
        android:onClick="showUserProfile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailUserName"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/name"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailScreenName"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tvDetailUserName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/screenname"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:id="@+id/tvDetailBody"
        android:layout_below="@+id/ivDetailProfilePic"
        android:text="@string/tweet_body_placeholder"/>
</RelativeLayout>